src/output/ExpParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g 2011-06-10 15:16:18
package output;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class ExpParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "POS", "NEG", "CALL", "EQ", "AND", "OR", "LT", "LTEQ", "GT", "GTEQ", "NOTEQ", "CONCAT", "SUB", "ADD", "DIV", "MULT", "EXP", "NOT", "VARIABLE", "LPAREN", "RPAREN", "FUNCNAME", "COMMA", "NUMBER", "STRING", "TRUE", "FALSE", "LBRACKET", "RBRACKET", "PERCENT", "ESCAPE_SEQUENCE", "WHITESPACE", "LETTER", "DIGIT"
    };
    public static final int EOF=-1;
    public static final int POS=4;
    public static final int NEG=5;
    public static final int CALL=6;
    public static final int EQ=7;
    public static final int AND=8;
    public static final int OR=9;
    public static final int LT=10;
    public static final int LTEQ=11;
    public static final int GT=12;
    public static final int GTEQ=13;
    public static final int NOTEQ=14;
    public static final int CONCAT=15;
    public static final int SUB=16;
    public static final int ADD=17;
    public static final int DIV=18;
    public static final int MULT=19;
    public static final int EXP=20;
    public static final int NOT=21;
    public static final int VARIABLE=22;
    public static final int LPAREN=23;
    public static final int RPAREN=24;
    public static final int FUNCNAME=25;
    public static final int COMMA=26;
    public static final int NUMBER=27;
    public static final int STRING=28;
    public static final int TRUE=29;
    public static final int FALSE=30;
    public static final int LBRACKET=31;
    public static final int RBRACKET=32;
    public static final int PERCENT=33;
    public static final int ESCAPE_SEQUENCE=34;
    public static final int WHITESPACE=35;
    public static final int LETTER=36;
    public static final int DIGIT=37;

    // delegates
    // delegators


        public ExpParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ExpParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ExpParser.tokenNames; }
    public String getGrammarFileName() { return "/home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g"; }


    public static class formula_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formula"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:24:1: formula : ( EQ )? expression ;
    public final ExpParser.formula_return formula() throws RecognitionException {
        ExpParser.formula_return retval = new ExpParser.formula_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EQ1=null;
        ExpParser.expression_return expression2 = null;


        CommonTree EQ1_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:25:2: ( ( EQ )? expression )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:25:4: ( EQ )? expression
            {
            root_0 = (CommonTree)adaptor.nil();

            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:25:4: ( EQ )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==EQ) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:25:5: EQ
                    {
                    EQ1=(Token)match(input,EQ,FOLLOW_EQ_in_formula76); 

                    }
                    break;

            }

            pushFollow(FOLLOW_expression_in_formula81);
            expression2=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression2.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formula"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:31:1: expression : boolExpr ;
    public final ExpParser.expression_return expression() throws RecognitionException {
        ExpParser.expression_return retval = new ExpParser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        ExpParser.boolExpr_return boolExpr3 = null;



        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:32:2: ( boolExpr )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:32:4: boolExpr
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_boolExpr_in_expression97);
            boolExpr3=boolExpr();

            state._fsp--;

            adaptor.addChild(root_0, boolExpr3.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class boolExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "boolExpr"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:34:1: boolExpr : concatExpr ( ( AND | OR | LT | LTEQ | GT | GTEQ | EQ | NOTEQ ) concatExpr )* ;
    public final ExpParser.boolExpr_return boolExpr() throws RecognitionException {
        ExpParser.boolExpr_return retval = new ExpParser.boolExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set5=null;
        ExpParser.concatExpr_return concatExpr4 = null;

        ExpParser.concatExpr_return concatExpr6 = null;


        CommonTree set5_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:35:2: ( concatExpr ( ( AND | OR | LT | LTEQ | GT | GTEQ | EQ | NOTEQ ) concatExpr )* )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:35:4: concatExpr ( ( AND | OR | LT | LTEQ | GT | GTEQ | EQ | NOTEQ ) concatExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_concatExpr_in_boolExpr107);
            concatExpr4=concatExpr();

            state._fsp--;

            adaptor.addChild(root_0, concatExpr4.getTree());
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:35:15: ( ( AND | OR | LT | LTEQ | GT | GTEQ | EQ | NOTEQ ) concatExpr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=EQ && LA2_0<=NOTEQ)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:35:16: ( AND | OR | LT | LTEQ | GT | GTEQ | EQ | NOTEQ ) concatExpr
            	    {
            	    set5=(Token)input.LT(1);
            	    set5=(Token)input.LT(1);
            	    if ( (input.LA(1)>=EQ && input.LA(1)<=NOTEQ) ) {
            	        input.consume();
            	        root_0 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(set5), root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_concatExpr_in_boolExpr143);
            	    concatExpr6=concatExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, concatExpr6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "boolExpr"

    public static class concatExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "concatExpr"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:37:1: concatExpr : sumExpr ( CONCAT sumExpr )* ;
    public final ExpParser.concatExpr_return concatExpr() throws RecognitionException {
        ExpParser.concatExpr_return retval = new ExpParser.concatExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token CONCAT8=null;
        ExpParser.sumExpr_return sumExpr7 = null;

        ExpParser.sumExpr_return sumExpr9 = null;


        CommonTree CONCAT8_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:38:2: ( sumExpr ( CONCAT sumExpr )* )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:38:4: sumExpr ( CONCAT sumExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_sumExpr_in_concatExpr155);
            sumExpr7=sumExpr();

            state._fsp--;

            adaptor.addChild(root_0, sumExpr7.getTree());
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:38:12: ( CONCAT sumExpr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==CONCAT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:38:13: CONCAT sumExpr
            	    {
            	    CONCAT8=(Token)match(input,CONCAT,FOLLOW_CONCAT_in_concatExpr158); 
            	    CONCAT8_tree = (CommonTree)adaptor.create(CONCAT8);
            	    root_0 = (CommonTree)adaptor.becomeRoot(CONCAT8_tree, root_0);

            	    pushFollow(FOLLOW_sumExpr_in_concatExpr161);
            	    sumExpr9=sumExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sumExpr9.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "concatExpr"

    public static class sumExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sumExpr"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:40:1: sumExpr : productExpr ( ( SUB | ADD ) productExpr )* ;
    public final ExpParser.sumExpr_return sumExpr() throws RecognitionException {
        ExpParser.sumExpr_return retval = new ExpParser.sumExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set11=null;
        ExpParser.productExpr_return productExpr10 = null;

        ExpParser.productExpr_return productExpr12 = null;


        CommonTree set11_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:41:2: ( productExpr ( ( SUB | ADD ) productExpr )* )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:41:4: productExpr ( ( SUB | ADD ) productExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_productExpr_in_sumExpr173);
            productExpr10=productExpr();

            state._fsp--;

            adaptor.addChild(root_0, productExpr10.getTree());
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:41:16: ( ( SUB | ADD ) productExpr )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=SUB && LA4_0<=ADD)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:41:17: ( SUB | ADD ) productExpr
            	    {
            	    set11=(Token)input.LT(1);
            	    set11=(Token)input.LT(1);
            	    if ( (input.LA(1)>=SUB && input.LA(1)<=ADD) ) {
            	        input.consume();
            	        root_0 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(set11), root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_productExpr_in_sumExpr185);
            	    productExpr12=productExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, productExpr12.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "sumExpr"

    public static class productExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "productExpr"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:43:1: productExpr : expExpr ( ( DIV | MULT ) expExpr )* ;
    public final ExpParser.productExpr_return productExpr() throws RecognitionException {
        ExpParser.productExpr_return retval = new ExpParser.productExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set14=null;
        ExpParser.expExpr_return expExpr13 = null;

        ExpParser.expExpr_return expExpr15 = null;


        CommonTree set14_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:44:2: ( expExpr ( ( DIV | MULT ) expExpr )* )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:44:4: expExpr ( ( DIV | MULT ) expExpr )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_expExpr_in_productExpr197);
            expExpr13=expExpr();

            state._fsp--;

            adaptor.addChild(root_0, expExpr13.getTree());
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:44:12: ( ( DIV | MULT ) expExpr )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=DIV && LA5_0<=MULT)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:44:13: ( DIV | MULT ) expExpr
            	    {
            	    set14=(Token)input.LT(1);
            	    set14=(Token)input.LT(1);
            	    if ( (input.LA(1)>=DIV && input.LA(1)<=MULT) ) {
            	        input.consume();
            	        root_0 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(set14), root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_expExpr_in_productExpr209);
            	    expExpr15=expExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expExpr15.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "productExpr"

    public static class expExpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expExpr"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:46:1: expExpr : unaryOperation ( EXP unaryOperation )* ;
    public final ExpParser.expExpr_return expExpr() throws RecognitionException {
        ExpParser.expExpr_return retval = new ExpParser.expExpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EXP17=null;
        ExpParser.unaryOperation_return unaryOperation16 = null;

        ExpParser.unaryOperation_return unaryOperation18 = null;


        CommonTree EXP17_tree=null;

        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:47:2: ( unaryOperation ( EXP unaryOperation )* )
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:47:4: unaryOperation ( EXP unaryOperation )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_unaryOperation_in_expExpr221);
            unaryOperation16=unaryOperation();

            state._fsp--;

            adaptor.addChild(root_0, unaryOperation16.getTree());
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:47:19: ( EXP unaryOperation )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==EXP) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:47:20: EXP unaryOperation
            	    {
            	    EXP17=(Token)match(input,EXP,FOLLOW_EXP_in_expExpr224); 
            	    EXP17_tree = (CommonTree)adaptor.create(EXP17);
            	    root_0 = (CommonTree)adaptor.becomeRoot(EXP17_tree, root_0);

            	    pushFollow(FOLLOW_unaryOperation_in_expExpr227);
            	    unaryOperation18=unaryOperation();

            	    state._fsp--;

            	    adaptor.addChild(root_0, unaryOperation18.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expExpr"

    public static class unaryOperation_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "unaryOperation"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:49:1: unaryOperation : ( NOT operand | ADD o= operand -> ^( POS $o) | SUB o= operand -> ^( NEG $o) | operand );
    public final ExpParser.unaryOperation_return unaryOperation() throws RecognitionException {
        ExpParser.unaryOperation_return retval = new ExpParser.unaryOperation_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NOT19=null;
        Token ADD21=null;
        Token SUB22=null;
        ExpParser.operand_return o = null;

        ExpParser.operand_return operand20 = null;

        ExpParser.operand_return operand23 = null;


        CommonTree NOT19_tree=null;
        CommonTree ADD21_tree=null;
        CommonTree SUB22_tree=null;
        RewriteRuleTokenStream stream_SUB=new RewriteRuleTokenStream(adaptor,"token SUB");
        RewriteRuleTokenStream stream_ADD=new RewriteRuleTokenStream(adaptor,"token ADD");
        RewriteRuleSubtreeStream stream_operand=new RewriteRuleSubtreeStream(adaptor,"rule operand");
        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:50:2: ( NOT operand | ADD o= operand -> ^( POS $o) | SUB o= operand -> ^( NEG $o) | operand )
            int alt7=4;
            switch ( input.LA(1) ) {
            case NOT:
                {
                alt7=1;
                }
                break;
            case ADD:
                {
                alt7=2;
                }
                break;
            case SUB:
                {
                alt7=3;
                }
                break;
            case VARIABLE:
            case LPAREN:
            case FUNCNAME:
            case NUMBER:
            case STRING:
            case TRUE:
            case FALSE:
            case LBRACKET:
                {
                alt7=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:50:4: NOT operand
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NOT19=(Token)match(input,NOT,FOLLOW_NOT_in_unaryOperation239); 
                    NOT19_tree = (CommonTree)adaptor.create(NOT19);
                    root_0 = (CommonTree)adaptor.becomeRoot(NOT19_tree, root_0);

                    pushFollow(FOLLOW_operand_in_unaryOperation242);
                    operand20=operand();

                    state._fsp--;

                    adaptor.addChild(root_0, operand20.getTree());

                    }
                    break;
                case 2 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:51:4: ADD o= operand
                    {
                    ADD21=(Token)match(input,ADD,FOLLOW_ADD_in_unaryOperation247);  
                    stream_ADD.add(ADD21);

                    pushFollow(FOLLOW_operand_in_unaryOperation251);
                    o=operand();

                    state._fsp--;

                    stream_operand.add(o.getTree());


                    // AST REWRITE
                    // elements: o
                    // token labels: 
                    // rule labels: retval, o
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
                    RewriteRuleSubtreeStream stream_o=new RewriteRuleSubtreeStream(adaptor,"rule o",o!=null?o.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 51:18: -> ^( POS $o)
                    {
                        // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:51:21: ^( POS $o)
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(POS, "POS"), root_1);

                        adaptor.addChild(root_1, stream_o.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:52:4: SUB o= operand
                    {
                    SUB22=(Token)match(input,SUB,FOLLOW_SUB_in_unaryOperation265);  
                    stream_SUB.add(SUB22);

                    pushFollow(FOLLOW_operand_in_unaryOperation269);
                    o=operand();

                    state._fsp--;

                    stream_operand.add(o.getTree());


                    // AST REWRITE
                    // elements: o
                    // token labels: 
                    // rule labels: retval, o
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
                    RewriteRuleSubtreeStream stream_o=new RewriteRuleSubtreeStream(adaptor,"rule o",o!=null?o.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 52:18: -> ^( NEG $o)
                    {
                        // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:52:21: ^( NEG $o)
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(NEG, "NEG"), root_1);

                        adaptor.addChild(root_1, stream_o.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:53:4: operand
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_operand_in_unaryOperation283);
                    operand23=operand();

                    state._fsp--;

                    adaptor.addChild(root_0, operand23.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "unaryOperation"

    public static class operand_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "operand"
    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:56:1: operand : ( literal | functionExpr -> ^( CALL functionExpr ) | percent | VARIABLE | LPAREN expression RPAREN -> ^( expression ) );
    public final ExpParser.operand_return operand() throws RecognitionException {
        ExpParser.operand_return retval = new ExpParser.operand_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token VARIABLE27=null;
        Token LPAREN28=null;
        Token RPAREN30=null;
        ExpParser.literal_return literal24 = null;

        ExpParser.functionExpr_return functionExpr25 = null;

        ExpParser.percent_return percent26 = null;

        ExpParser.expression_return expression29 = null;


        CommonTree VARIABLE27_tree=null;
        CommonTree LPAREN28_tree=null;
        CommonTree RPAREN30_tree=null;
        RewriteRuleTokenStream stream_RPAREN=new RewriteRuleTokenStream(adaptor,"token RPAREN");
        RewriteRuleTokenStream stream_LPAREN=new RewriteRuleTokenStream(adaptor,"token LPAREN");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_functionExpr=new RewriteRuleSubtreeStream(adaptor,"rule functionExpr");
        try {
            // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:57:2: ( literal | functionExpr -> ^( CALL functionExpr ) | percent | VARIABLE | LPAREN expression RPAREN -> ^( expression ) )
            int alt8=5;
            switch ( input.LA(1) ) {
            case STRING:
            case TRUE:
            case FALSE:
            case LBRACKET:
                {
                alt8=1;
                }
                break;
            case NUMBER:
                {
                int LA8_2 = input.LA(2);

                if ( (LA8_2==PERCENT) ) {
                    alt8=3;
                }
                else if ( (LA8_2==EOF||(LA8_2>=EQ && LA8_2<=EXP)||LA8_2==RPAREN||LA8_2==COMMA||LA8_2==RBRACKET) ) {
                    alt8=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 2, input);

                    throw nvae;
                }
                }
                break;
            case FUNCNAME:
                {
                alt8=2;
                }
                break;
            case VARIABLE:
                {
                alt8=4;
                }
                break;
            case LPAREN:
                {
                alt8=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }

            switch (alt8) {
                case 1 :
                    // /home/kevin/workspace/hibernate/ExpHighlighter/src/Exp.g:57:4: literal
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_literal_in_operand294);
                    literal24=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, literal24.getTree());
